--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
   "bugs": {
     "url": "https://github.com/dnotes/markdown-it-chords/issues"
   },
-  "homepage": "https://dnotes.github.io/markdown-it-chords"
+  "homepage": "https://erlkim.github.io/kunci"
 }
